# OpenChisel

./: LICENSE  README.md
chisel_ros/: CMakeLists.txt  catkin.cmake  mainpage.dox  manifest.xml  package.xml  rosbuild.cmake
chisel_ros/include/chisel_ros/: ChiselServer.h  Conversions.h  Serialization.h
chisel_ros/launch/: launch_ada_softkinetic.launch  launch_freiburg_dataset.launch  launch_freiburg_dataset.launch~  launch_kinect_local.launch  launch_kinect_local.launch~  launch_lsd_slam_kinect.launch  launch_lsd_slam_kinect.launch~  launch_sim.launch
chisel_ros/msg/: Chunk.msg~  ChunkListMessage.msg  ChunkListMessage.msg~  ChunkMessage.msg  ChunkMessage.msg~
chisel_ros/src/: ChiselNode.cpp  ChiselServer.cpp
chisel_ros/src/chisel_ros/msg/: _Chunk.py  _ChunkList.py  _ChunkListMessage.py  _ChunkMessage.py  __init__.py
chisel_ros/src/chisel_ros/srv/: _GetAllChunksService.py  _PauseService.py  _ResetService.py  _SaveMeshService.py  (+1 more)
chisel_ros/srv/: GetAllChunksService.srv  GetAllChunksService.srv~  ResetService.srv  SaveMeshService.srv  SaveMeshService.srv~
open_chisel/: CMakeLists.txt  catkin.cmake  manifest.xml  package.xml  rosbuild.cmake
open_chisel/include/open_chisel/: Chisel.h  Chunk.h  ChunkManager.h  ColorVoxel.h  DistVoxel.h  FixedPointFloat.h  ProjectionIntegrator.h
open_chisel/src/: Chisel.cpp  Chunk.cpp  Chunk.h  ChunkManager.cpp  ColorVoxel.cpp  DistVoxel.cpp  DistVoxel.h  ProjectionIntegrator.cpp
open_chisel/src/camera/: Intrinsics.cpp  PinholeCamera.cpp
open_chisel/src/geometry/: AABB.cpp  Frustum.cpp  Plane.cpp  Raycast.cpp
open_chisel/src/io/: PLY.cpp
open_chisel/src/marching_cubes/: MarchingCubes.cpp
open_chisel/src/mesh/: Mesh.cpp
open_chisel/src/pointcloud/: PointCloud.cpp
(+20 files in other folders)
